--- a/Draft14.tex
+++ b/Draft14.tex
@@ -129,15 +129,15 @@ The intuition for solving problem~\eqref{eq:main-problem} with momentum methods 
  \begin{align}\label{eq:heavy-ball-ode}
  m \frac{d^2x}{dt^2}& = - \nabla f(x) - m \dot \gamma_t \frac{dx}{dt}
  \end{align}
-corresponds to the equations of motion of an object with mass $m$ in the presence of  friction or viscosity and a potential $f$. The trajectories of this dynamical system will tend to have directions of motion that persist over time.  In the limit as the mass goes to zero, and letting $\gamma_t \propto t/m$, we recover a gradient-flow equation, which is the continuous-time limit of gradient descent~\cite{Acceleration}.  Thus, the mass term here serves to \emph{accelerate} the progress towards the bottom of the well. 
+corresponds to the equations of motion of an object with mass $m$ in the presence of  friction or viscosity and a potential $f$. The trajectories of this dynamical system will tend to have directions of motion that persist over time, however for some values of $\gamma_t$, the dynamics will converge to the minimum of $f$.  In the limit as the mass goes to zero, and letting $\gamma_t \propto t/m$, we recover the gradient-flow dynamics, which is the continuous-time limit of gradient descent~\cite{Acceleration}.  Thus, the mass term here serves to \emph{accelerate} the progress towards the bottom of the well. 
 
-In seminal work, Polyak defined and analyzed the Heavy Ball method as an application of Euler's method to the dynamical system~\eqref{eq:heavy-ball-ode} when $\gamma_t$ is linear.  He was able to show \emph{local convergence} of this method, but was unable to prove global convergence.  Moreover, his local convergence result required the assumption that $f$ is strongly convex in the neighborhood of the associated stationary point.
+In seminal work, Polyak defined and analyzed the Heavy Ball method as an application of Euler's method to the dynamical system~\eqref{eq:heavy-ball-ode}, when $\gamma_t$ is linear.  He was able to show \emph{local convergence} of this method, but was unable to prove global convergence.  Moreover, his local convergence result required the assumption that $f$ is strongly convex in the neighborhood of the associated stationary point.
 
 Until recently, this ODE perspective on optimization algorithms was largely abandoned in favor of Nesterov's estimate sequence framework.  However, there has been a recent resurgence in interest in ODE-based analyses.  Su, Boyd and Cand\`es~\cite{SuBoydCandes14}, showed that the continuous-time limit of Nesterov's accelerated gradient descent method corresponds to the following second-order ODE, 
  \begin{equation}\label{Eq:SuBoydCandes}
  \ddot X_t + \frac{r}{t} \dot X_t + \nabla f(X_t) = 0,\,\,\,\,r \geq 3.
  \end{equation}
-This is equivalent to~\eqref{eq:heavy-ball-ode}, where the dynamics model an object with unit mass and the time-dependent damping term $\gamma_t = r\log t$ is logarithmic.  They also established a convergence rate of $O(1/t^2)$ for this continuous-time system via a Lyapunov function argument. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained in passing from continuous time to discrete time. Two things remain unclear from their analysis however:  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection---if any---there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
+This is equivalent to~\eqref{eq:heavy-ball-ode}, where the dynamics model an object with unit mass and the damping term $\gamma_t = r\log t$ is logarithmic.  They also established a convergence rate of $O(1/t^2)$ for this continuous-time system via a Lyapunov function argument. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained in passing from continuous time to discrete time. Two things remain unclear from their analysis however:  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection---if any---there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
 
 Krichene, Bartlett and Bayen~\cite{Krichene15} derived a modified accelerated mirror descent algorithm using a ``discretized'' Lyapunov function. However, their proof targeted a different algorithm than the algorithm in Nesterov's original work~\cite{Nesterov05}. In particular, their analysis entailed an additional smoothness assumption which is not necessary for the original algorithm~\cite{Nesterov05}, or for the original proof technique using estimate sequences.\footnote{In particular, they assume $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y) \leq \frac{L}{2}\|x-y\|^2$%, so that for all intensive purposes, their setting is given by the norm
 . This additional assumption greatly simplifies the proof. However, only the assumption of an upper bound is needed for the most general form of accelerated methods is that $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y)$.} See also Nemirovski and Yudin's original work~\cite{NemirovskiiYudin} for a continuous-time perspective on mirror descent and a Lyapunov analysis of convergence.
@@ -238,7 +238,7 @@ We begin by demonstrating how to derive the Lyapunov function~\eqref{Eq:E} for t
 %\end{small}
 Here~\eqref{eq:apply-dynamics} uses the momentum dynamics%~\eqref{Eq:EL}.
 ~\eqref{Eq:ELH} and~\eqref{Eq:ELZ}. 
-The inequality~\eqref{eq:apply-convexity} follows from the convexity of $f$. Rearranging terms and taking $x = x^\ast$, we have show that the function~\eqref{Eq:E} has nonpositive derivative for all $t$ and is hence a Lyapunov function for the family of momentum dynamics~\eqref{Eq:EL}.
+The inequality~\eqref{eq:apply-convexity} follows from the convexity of $f$. Rearranging terms and taking $x = x^\ast$, we have shown that the function~\eqref{Eq:E} has nonpositive derivative for all $t$ and is hence a Lyapunov function for the family of momentum dynamics~\eqref{Eq:EL}.
 
  The structure of this derivation provides a tool for us to analyze several discretizations of momentum dynamics~\eqref{Eq:ELBreg}.
  In the following subsections, we demonstrate how to analyze the quasi-monotone subgradient method~\cite{Nesterov15}, the class of accelerated gradient methods~\cite{Baes09,Acceleration}, and the general family of conditional gradient algorithms~\cite{NesterovCond15} using the Lyapunov argument above.
