--- a/Draft14.tex
+++ b/Draft14.tex
@@ -94,7 +94,7 @@ In order to make momentum methods rigorous, a different approach was required.  
 To overcome the lack of intuition for the estimate sequences technique, several authors have recently proposed schemes to achieve acceleration without appealing to estimate sequences~\cite{Fazel, BubeckLeeSingh15, Lessard14}.  One promising general approach to the analysis of acceleration has been to analyze the continuous-time limit of accelerated methods and to show that the stability of the resulting ODEs can be verified via a Lyapunov function~\cite{SuBoydCandes14,Krichene15,Acceleration}.  However, these methods stop short of providing principles for deriving a discrete-time optimization algorithm from a continuous-time ODE.  There are many ways to discretize ODEs, but not all of them give rise to convergent methods or to acceleration.  Indeed, for unconstrained optimization on Euclidean spaces in the setting where the objective is strongly convex, Polyak's Heavy Ball method and Nesterov's accelerated gradient descent have the same continuous-time limit.
 
 In this paper, we propose a bridge between continuous-time limits and discrete-time algorithms.  Our method takes, as its primary object of study a general Lyapunov function for momentum methods in continuous time.  Through a diverse set of examples, we demonstrate how the proofs of momentum methods can be understood as bounding discretization errors of the Lyapunov function when moving to discrete time.  In particular, we show how the discretization of the associated continuous-time ODE needs to be performed in such a way that the Lyapunov function remains valid when transitioning to discrete time.
-Using this technique, we provide a simple, direct proof of the convergence of Nesterov's method for strongly convex functions in Euclidean spaces.  Our proof makes clear why only certain parameterizations of the continuous ODEs lead to valid discrete-time methods.  Moreover, we explain the need for the extragradient step inside Nesterov's method which does not appear in Polyak's method.  
+Using this technique, we provide a simple, direct proof of the convergence of Nesterov's method for strongly convex functions in Euclidean spaces.  Our proof makes clear why only certain parameterizations of the continuous ODEs lead to valid discrete-time methods.  Moreover, we provide new perspectives on the need for the extragradient step inside Nesterov's method which does not appear in Polyak's method.  
 Finally, we show there is a striking equivalence between estimate sequences and Lyapunov functions.  In continuous and discrete time, estimate sequences can be derived directly from the Lyapunov function and vice versa.  We show that the associated continuous-time estimate sequence can also be directly discretized to give standard estimate-sequence based proofs of momentum methods.  This clarifies how Nesterov's ``algebraic trick'' is closely related to invariant reduction proofs that are common in algorithm analysis.
 
 The paper proceeds as follows.  We first describe the related work in viewing optimization algorithms as discretizations of continuous-time dynamical systems.  We then introduce the Lyapunov functions that we will use throughout the paper to demonstrate convergence of algorithms.  In particular, we will introduce time-varying Lyapunov functions that not only establish algorithm convergence but additionally verify a \emph{convergence rate}.  
@@ -512,9 +512,9 @@ We give a proof of both of these methods in Appendix~\ref{App:ProofAccGrad}.
 \label{Sec:CondGrad}
  The conditional Gradient Method, also called the {\em Frank-Wolfe} algorithm~\cite{FrankWolfe}, has garnered renewed interest over the last several years. This interest has inspired several different analyses~\cite{Freund14, Bach15} of the algorithm. Of particular note is the analysis provided by Nesterov~\cite{NesterovCond15}, who used to technique of estimate sequences to evaluate the algorithm under varying smoothness assumptions and step-size conditions. Nesterov also extended the algorithm to provide an analysis of a trust-region Newton-type method. Here, we explore the conditional gradient method from a dynamical view, and give an alternate analysis of both methods. To do so, we first revisit the derivation of the Lyapunov function. Notice, that if $\dot \beta_t >0 $ and we can ensure the following inequality for our dynamical system
 \begin{align}\label{Eq:Frank1} 
-0 \leq \langle \nabla f(X_t), x-  Z_t\rangle, \quad \quad \forall x \in \X 
+0 \leq \langle \nabla f(X_t), x-  Z_t\rangle,
 \end{align}
-where 
+ $\forall x \in \X $, where 
 \begin{align}\label{Eq:Frank2}
 Z_t = X_t + \frac{1}{\dot \beta_t} \dot X_t,
 \end{align}
